# IOP-AMR

./: .editorconfig  .gitignore  LICENSE  README.md
app/: .dockerignore  .gitignore  Dockerfile.linux-build  README.md  analysis_options.yaml  pubspec.yaml
app/lib/: app.dart  main.dart  router.dart
app/lib/core/discovery/: mdns_scanner.dart
app/lib/core/gamepad/: flydigi_mapper.dart  gamepad_cmd_vel_listener.dart
app/lib/core/navigation/: app_page_transitions.dart
app/lib/core/providers/: connection_provider.dart  settings_provider.dart
app/lib/core/ros/: msg_types.dart  nav2_goals.dart  param_service.dart  ros_client.dart  rosbridge_client.dart  rosbridge_protocol.dart  topics.dart
app/lib/core/storage/: hive_boxes.dart
app/lib/core/theme/: app_theme.dart  ui_kit.dart
app/lib/features/camera/: camera_screen.dart
app/lib/features/logs/: logs_screen.dart
app/lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_vi.dart  app_vi.arb
app/linux/: CMakeLists.txt
app/linux/runner/: my_application.cc
app/scripts/: build_linux_release.sh  build_windows_release.ps1
app/test/: widget_test.dart
app/tool/: mock_rosbridge.dart
app/windows/: CMakeLists.txt
app/windows/flutter/: generated_plugins.cmake
app/windows/runner/: Runner.rc  main.cpp
docs/: GAMEPAD_MAPPING.md  PROTOCOL.md  SETUP_LINUX.md  SETUP_WINDOWS.md  TROUBLESHOOTING.md
jetson/: .cursorignore  AGENTS.md  README.md
jetson/amr_integration/: CMakeLists.txt  README.md  package.xml
jetson/amr_integration/amr_integration/: __init__.py  bagger_node.py  estop_node.py  joy_stack_node.py  monitor_node.py  slam_control_node.py
jetson/amr_integration/config/: rosbridge.yaml
jetson/amr_integration/launch/: bridge.launch.py  full.launch.py  integration.launch.py
jetson/amr_integration/msg/: Battery.msg  SystemStats.msg
jetson/amr_integration/scripts/: bagger_node  estop_node  joy_stack_node  monitor_node  slam_control_node
jetson/amr_integration/srv/: BagControl.srv  JoyStackControl.srv  SlamControl.srv
jetson/amr_integration/systemd/: amr-extra-launches.service  amr-integration.service
jetson/config/: nav2_params.yaml  rosbridge_auth.yaml  twist_mux.yaml
jetson/docs/: AUDIT_CHECKLIST.md  COLD_BOOT_APP_CONTROL.md  NAV2_TUNING.md  PROTOCOL.md  SETUP_JETSON.md  SYSTEMD.md  TROUBLESHOOTING.md  WIRING.md
jetson/launch_refs/: example_full_stack.launch.py
jetson/scripts/: audit_robot_ws.sh  install_deps.sh  install_integration.sh  install_systemd.sh  lan_info.sh
scripts/: sync_protocol.ps1
(+17 files in other folders)
